feat: parse arguments with `s` suffix as multi